Don't page-break before or after a repeated frame. b=278983 r+sr=bzbarsky