layout/tables/nsTableRowGroupFrame.h
@@ -87,6 +87,8 @@ struct nsRowGroupReflowState {
 #define NS_ROWGROUP_HAS_STYLE_HEIGHT     0x40000000
 // we need a 3rd pass reflow to deal with pct height nested tables 
 #define NS_ROWGROUP_NEED_SPECIAL_REFLOW  0x20000000
+// the next is also used on rows (see nsTableRowGroupFrame::InitRepeatedFrame)
+#define NS_REPEATED_ROW_OR_ROWGROUP      0x10000000
 /**
  * nsTableRowGroupFrame is the frame that maps row groups 
  * (HTML tags THEAD, TFOOT, and TBODY). This class cannot be reused
